Добавил сваггер для users.
